fix: fixed alignment of bharatpur card

--- a/style.css
+++ b/style.css
@@ -331,9 +331,6 @@ body {
     /* height: 500px; */
     /* margin: 10px; */
   }
-  .bg-overlayBox-4{
-    margin-top: 10px;
-  }
 }
 @media (min-width: 1920px) {
   .bg-overlayBox-1, .bg-overlayBox-2, .bg-overlayBox-3 ,.bg-overlayBox-4{
